2005-01-17  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added PowerShot SD200.

2005-01-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Pass Camera* to property put and get
	  functions too, so we can make vendor based adjustements.

2005-01-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Return the correct path and filename
	  on --capture-image.

2005-01-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Minolta DIMage Z2 (PictBridge).

2005-01-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Sony DSC-T3 as reported.

2005-01-08  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Send owner name with \0, or we get
	  it back corrupted.

2005-01-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon FlashMode property.

2004-12-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon CoolPix 4100 as reported.

2004-12-21  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Kodak DX7590 (bug #1089154)

2004-12-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Sony DSC-P51 (bug #1088798)

2004-12-20  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Sony DSC-F717. (bug #1087148)

2004-12-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added HP Photosmart R707 and M307.

2004-11-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: D70 PTP mode has 0x406 id.
	* library.c: Kodak LS473 should be 743 (typo fixed)
		     the CX4210 should have product id 0x560 instead of 0x565

2004-11-29  Marcus Meissner  <marcus@jet.franken.de>
	
	Edward Kuns
	* library.c: Added hack to detect / if no 
	  object has parentid 0. fixes Canon EOS 20d.

2004-11-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Panasonic DMC-FZ20.

2004-11-09  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added IXUS 40.

2004-10-28  Hubert Figuiere  <hfiguiere@teaser.fr>

	* ptp.h: Fix build for gcc 2.95
	(bug #1055868)
